# OpenGLStartupProgram

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  populate_cmake_src_deps.py
OurDriver/: CMakeLists.txt
OurDriver/Source/: main.cpp
OurLibrary/: CMakeLists.txt
OurLibrary/Source/: Core.cpp  Core.h
OurLibrary/Source/Logging/: Logging.h
build_scripts/build_scripts_linux/: build.sh  build_run.sh  clean.sh  run.sh
build_scripts/build_scripts_windows/: build_run.bat  run.bat
build_scripts_windows/: build.bat  build_run.bat  run.bat
